# master_text_recognition

./: .gitattributes  CMakeLists.txt  README.md  main.cpp  test.cpp
dictionary/: google-10000-english.txt
images/: text.xopp  text.xopp~
include/: image.cpp  image.h  line_segmentation.cpp  line_segmentation.h
model/: first.json  one.json  one_two.json  second.json
